# file-butler

./: .env.example  .gitignore  README.md
client/: README.md  package.json
server/: README.md  pyproject.toml
server/src/file_butler_server/: __init__.py  __main__.py
server/src/file_butler_server/api/: app.py
server/src/file_butler_server/core/: current_user.py  database.py
server/src/file_butler_server/services/: agent.py  dashboard.py  file_picker.py  library.py  settings.py  suggestions.py  uploads.py
server/tests/: test_agent_service.py  test_dashboard_service.py  test_database.py  test_file_picker_service.py  test_library_service.py  test_settings_service.py  test_suggestions_service.py  test_uploads_service.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  main.js  styles.css
