[project]
name = "file-butler-server"
version = "0.1.0"
description = "Python backend skeleton for File Butler."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
