[project]
name = "file-butler-server"
version = "0.1.0"
description = "Python backend skeleton for File Butler."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
